--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -3,9 +3,13 @@
 {% block title %}پروژه ها{% endblock %}
 
 {% block dialog %}
-    {% include 'researcher/layouts/initial_information.html' %}
     {% include 'researcher/layouts/showProject.html' %}
     {% include 'researcher/layouts/vote_dialog.html' %}
+{% endblock %}
+{% block modals %}
+    {% if request.user.researcheruser.status.status == 'signed_up' %}
+        {% include 'researcher/layouts/initial_information.html' %}
+    {% endif %}
 {% endblock %}
 
 {% block name %}{{ request.user.researcheruser.researcherprofile }}{% endblock %}
