--- a/static/css/style.css
+++ b/static/css/style.css
@@ -615,6 +615,10 @@ img {
     }
 }
 
+.modal {
+    color: #707070;
+}
+
 .fixed-back .close, .modal .close {
     position: absolute;
     top: 5px;
@@ -833,23 +837,23 @@ img {
     color: #3ccd1c;
 }
 
-.fixed-back .no-comment {
+.modal .no-comment {
     width: fit-content;
     text-align: center;
     -webkit-border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     border-radius: 0.25em;
     padding: 5px 10px;
-    margin: 15px auto -40px;
+    margin: 15px auto 10px;
     display: none;
 }
 
-.fixed-back .no-comment h6 {
+.modal .no-comment h6 {
     color: #3CCD1C;
     margin-top: 10px;
 }
 
-.fixed-back .no-comment pre {
+.modal .no-comment pre {
     font-weight: 500;
     font-size: 14px;
     color: #707070;
@@ -858,11 +862,11 @@ img {
     max-width: 500px;
 }
 
-.fixed-back .no-comment.show {
+.modal .no-comment.show {
     display: block;
 }
 
-.fixed-back .no-comment img {
+.modal .no-comment img {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
@@ -4216,18 +4220,54 @@ pre#question-body {
     background-size: contain;
 }
 
+.modal-header .modal-title.default {
+    color: #3CCD1C;
+    font-weight: 800;
+}
+
 .modal-header, .modal-footer {
     border: none;
 }
 
 .modal-header {
     direction: rtl;
+    padding-right: 30px;
 }
 
 .modal-header .close {
     position: relative;
     margin: 0;
     padding: 0;
+}
+
+.divide__line {
+    position: relative;
+    min-width: 100%;
+}
+
+.divide__line .w__title {
+    background-color: #ffffff;
+    color: black;
+    position: relative;
+    z-index: 1;
+    padding-left: 10px;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.divide__line .__line {
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    left: 0;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    background-color: #DFDFDF;
+    z-index: 0;
 }
 
 .modal-footer {
@@ -4300,3 +4340,71 @@ span.border-span {
     /*background-repeat: repeat-x;*/
     box-shadow: 0 0 2px 0 #3CCD1C;
 }
+
+.form-group {
+    text-align: right;
+}
+
+.form-group label {
+    position: relative;
+    margin-bottom: 2px;
+    top: 0;
+    right: 0;
+}
+
+.form-group label.upload {
+    position: absolute;
+    top: 120px;
+    right: calc(50% - 70px);
+    width: 40px;
+    height: 40px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background-color: #fdfdfd;
+    color: #6f7285;
+    border: none;
+}
+
+.form-group input, .form-group textarea, .form-group select {
+    background-color: #F8FDF7;
+    margin-top: 0;
+}
+
+input[type="number"]{
+    direction: ltr;
+    letter-spacing: 1px;
+}
+
+.btn {
+    
+}
+
+.btn-primary {
+    background-color: #3CCD1C;
+    border: none;
+    box-shadow: 0 0 0 0.2rem transparent;
+}
+
+.btn-primary:hover, .btn-primary:not(:disabled):not(.disabled).active,
+ .btn-primary:not(:disabled):not(.disabled):active,
+  .show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: rgb(50, 177, 22);
+    border-color: transparent;
+    outline: none;
+}
+.btn-primary.focus, .btn-primary:focus {
+    box-shadow: 0 0 0 0.2rem rgba(50, 177, 22,.5);
+}
+.modal {
+    background-color: rgba(8,25,43,0.85);
+}
+body > * {
+    transition: filter .15s linear;
+}
+.modal-open > *:not(.modal) {
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    /* background: white; */
+ }
